<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@drawable/bg_black_gradiant"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="10dip"
	android:layout_marginRight="10dip"
	android:orientation="vertical">

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="15sp"
		android:layout_marginLeft="15sp"
		android:layout_marginRight="15sp"
		android:layout_marginTop="15sp"
		android:text="@string/what_to_do_with_ringtone"
		android:textColor="#ffffffff"
		android:textSize="14sp" />

	<Button
		android:id="@+id/button_make_default"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15sp"
		android:layout_marginRight="15sp"
		android:layout_marginTop="10sp"
		android:text="@string/make_default_ringtone_button" />

	<Button
		android:id="@+id/button_choose_contact"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="15sp"
		android:layout_marginRight="15sp"
		android:layout_marginTop="10sp"
		android:text="@string/choose_contact_ringtone_button" />

	<Button
		android:id="@+id/button_do_nothing"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="15sp"
		android:layout_marginLeft="15sp"
		android:layout_marginRight="15sp"
		android:layout_marginTop="20sp"
		android:text="@string/do_nothing_with_ringtone_button" />

</LinearLayout>
