<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_black_gradiant">

    <RelativeLayout
        android:id="@+id/rlTopWav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlBottomView">

        <!--ImageView
         android:id="@+id/bkgnd"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/bkgnd"-->

        <com.azmp3cutter.WaveformView
            android:id="@+id/waveform"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#5f25" />

        <com.azmp3cutter.MarkerView
            android:id="@+id/startmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/start_marker"
            android:nextFocusDown="@+id/endmarker"
            android:src="@drawable/marker_left" />

        <com.azmp3cutter.MarkerView
            android:id="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/end_marker"
            android:nextFocusDown="@+id/info"
            android:nextFocusUp="@+id/startmarker"
            android:src="@drawable/marker_right" />

    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTopWav"
        android:gravity="center"
        android:nextFocusDown="@+id/play"
        android:nextFocusUp="@+id/endmarker"
        android:padding="5dip" />

    <RelativeLayout
        android:id="@+id/rlBottomView"
        android:layout_width="match_parent"
        android:layout_height="165dip"
        android:layout_alignParentBottom="true"

        android:background="#553f">

        <RelativeLayout
            android:id="@+id/rlAds"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.4"
            android:paddingTop="30dp"
            android:background="#9ddd"
            android:gravity="center">

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llPlay"
            style="@style/ToolbarBackground"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:layout_above="@+id/llTime"
            android:alpha="0.6"
            android:gravity="center">

            <ImageButton
                android:id="@+id/rew"
                style="@android:style/MediaButton"
                android:layout_width="64dip"
                android:layout_height="52dip"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="6dip"
                android:contentDescription="@string/rewind"
                android:src="@android:drawable/ic_media_previous" />

            <ImageButton
                android:id="@+id/play"
                style="@android:style/MediaButton"
                android:layout_width="71dip"
                android:layout_height="52dip"
                android:layout_marginBottom="6dip"
                android:layout_marginTop="6dip"
                android:contentDescription="@string/play"
                android:src="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ffwd"
                style="@android:style/MediaButton"
                android:layout_width="64dip"
                android:layout_height="52dip"
                android:layout_marginBottom="6dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="6dip"
                android:contentDescription="@string/ffwd"
                android:src="@android:drawable/ic_media_next" />

        </LinearLayout>
        <!--
            <LinearLayout style="@style/HorizontalDividerTop" />
            <LinearLayout style="@style/HorizontalDividerBottom" />-->

        <LinearLayout
            android:id="@+id/llTime"
            style="@style/ToolbarBackground"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:layout_alignParentBottom="true"
            android:alpha="0.6"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mark_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:labelFor="@+id/starttext"
                android:text="@string/start_label"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/starttext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="30dip"
                android:gravity="center"
                android:inputType="number|numberDecimal"
                android:minWidth="70dp"
                android:text="123"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/mark_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:labelFor="@+id/endtext"
                android:text="@string/end_label"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/endtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:gravity="center"
                android:inputType="number|numberDecimal"
                android:minWidth="70dp"
                android:textSize="16sp" />

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>
